fix: modal left icon size aligned to figma

--- a/src/app/features/contacts/contact-form/contact-form.scss
+++ b/src/app/features/contacts/contact-form/contact-form.scss
@@ -34,6 +34,14 @@
   justify-content: center;
 }
 
+.modal-left {
+  .join-img {
+    width: 55.6px;
+    height: 66.48px;
+    opacity: 1;
+  }
+}
+
 .join-img {
   width: 50px;
   height: 50px;
